# ambrosial

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  swiggy.py  utils.py
advanced/: README.md
analytics/: __init__.py  addresses.py  items.py  orderitems.py  orders.py  restaurants.py
src/ambrosial/: __init__.py
src/ambrosial/swan/: __init__.py  addresses.py  items.py  offers.py  orders.py  restaurants.py  typealiases.py
src/ambrosial/swich/: __init__.py  barplot.py  calendarplot.py  calplot.py  ghubmap.py  heatmap.py  helpers.py  map.py  regression.py  utils.py  wordcloud.py
src/ambrosial/swich/helper/: barplot.py  calendarplot.py  ghubmap.py  heatmap.py  map.py  regression.py
src/ambrosial/swiggy/: __init__.py  address.py  convert.py  helper.py  iohandler.py  item.py  order.py  restaurant.py  utils.py
src/ambrosial/swiggy/datamodel/: __init__.py  address.py  item.py  order.py  restaurant.py  typealiases.py
swan/: __init__.py  addresses.py  items.py  orders.py
swiggy/: __init__.py  address.py  convert.py  item.py  order.py  orderitem.py  restaurant.py  utils.py
tests/: test_swich.py  test_swiggy.py
tests/swan/: test_items.py  test_orders.py  test_rest.py  test_swan.py
