[metadata]
name = ambrosial
version = attr: ambrosial.VERSION
description = attr: ambrosial.DESCRIPTION
author = Anurag Shukla
author_email = anuragshukla.official@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    Swiggy
    data analysis
    web scraping
    time series
platforms = linux, win32, osx


[options]
packages =
    ambrosial
install_requires = file: requirements.txt
python_requires = >=3.7
package_dir =
    =src

[options.extras_require]
test =
    pytest>=7.1
dev = file: requirements-dev.txt

[flake8]
max_line_length = 88
ignore =
    # Missing type annotation for self in method.
    ANN101
    # class attribute "id" & "type" is shadowing a python builtin. That's how API return
    A003
    # Found too short, wrong variable and attributes name
    # https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/index.html#
    WPS12
    # mixedCase class attribute. That's how API return
    N815

[mypy]
ignore_missing_imports = True
[mypy-requests.*]
ignore_missing_imports = True


[isort]
profile = black
line_length = 88
