[metadata]
name = ambrosial
version = attr: ambrosial.__version__
description = "Fetch, save and analyse your Swiggy data"
author = Anurag Shukla
author_email = anuragshukla.official@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    Swiggy
    data analysis
    web scraping
    time series
platforms = linux, win32, osx


[options]
packages =
    ambrosial
install_requires =
    browser-cookie3>=0.16.1
    requests>=2.27.0
    msgpack>=1.0.3
    pydantic>=1.9.0

python_requires = >=3.9
package_dir =
    =src

[options.extras_require]
chart =
    july>=0.1.3
test =
    pytest>=7.1
dev =
    pre-commit>=2.19.0
    flake8>=5.0.0
    black>=22.6.0
    mypy>=0.971
    isort>=5.10.1
    flake8-return
    flake8-builtins
    flake8-simplify
    flake8-functions
    flake8-annotations
    flake8-unused-arguments
    wemake-python-styleguide
    flake8-cognitive-complexity
    flake8-expression-complexity
    flake8-annotations-complexity


[flake8]
max_line_length = 88
ignore =
    # Missing type annotation for self in method.
    ANN101
    # Found too short, wrong variable and attributes name
    # https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/index.html#
    WPS12
    # mixedCase class attribute. That's how API return
    N815

[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
[mypy-requests.*]
ignore_missing_imports = True


[isort]
profile = black
line_length = 88

