[metadata]
name = ambrosial
version = attr: ambrosial.__version__
description = "Fetch, analyze and visualize your Swiggy order history!"
author = Anurag Shukla
author_email = anuragshukla.official@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    Intended Audience :: Developers
    OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords =
    Swiggy
    data analysis
    web scraping
    time series
platforms = linux, win32, osx


[options]
packages =
    ambrosial
install_requires =
    browser-cookie3==0.16.2
    requests==2.27.0
    msgpack==1.0.3
    pydantic==1.9.0
    july==0.1.3
    stylecloud==0.5.2
    seaborn[stats]==0.12.0
    folium==0.12.1
    pillow==9.2.0
    alabaster==0.7.12
    anyio==3.6.2
    argon2-cffi==21.3.0
    argon2-cffi-bindings==21.2.0
    astor==0.8.1
    astpretty==3.0.0
    asttokens==2.1.0
    attrs==22.1.0
    Babel==2.10.3
    backcall==0.2.0
    beautifulsoup4==4.11.1
    black==22.10.0
    bleach==5.0.1
    branca==0.5.0
    charset-normalizer==2.1.1
    click==8.1.3
    cognitive-complexity==1.3.0
    colorama==0.4.6
    contourpy==1.0.5
    cryptography==38.0.1
    cycler==0.11.0
    debugpy==1.6.3
    decorator==5.1.1
    defusedxml==0.7.1
    distlib==0.3.6
    docutils==0.19
    entrypoints==0.4
    exceptiongroup==1.0.0
    executing==1.2.0
    fastjsonschema==2.16.2
    filelock==3.8.0
    fire==0.4.0
    flake8==5.0.4
    fonttools==4.38.0
    icon-font-to-png==0.4.1
    identify==2.5.8
    idna==3.4
    imagesize==1.4.1
    iniconfig==1.1.1
    jaraco.classes==3.2.3
    jedi==0.18.1
    jeepney==0.8.0
    joypy==0.2.6
    jsonschema==4.17.0
    july==0.1.3
    keyring==23.9.3
    kiwisolver==1.4.4
    lz4==4.0.2
    matplotlib==3.6.0
    matplotlib-inline==0.1.6
    mccabe==0.7.0
    mistune==2.0.4
    more-itertools==9.0.0
    mr-proper==0.0.7
    msgpack==1.0.4
    mypy==0.982
    mypy-extensions==0.4.3
    nbclassic==0.4.8
    nbclient==0.7.0
    nbconvert==7.2.3
    nbformat==5.7.0
    nest-asyncio==1.5.6
    numpy==1.23.4
    packaging==21.3
    palettable==3.3.0
    pandas==1.5.1
    pandocfilters==1.5.0
    parso==0.8.3
    pathspec==0.10.1
    patsy==0.5.3
    pbkdf2==1.3
    pickleshare==0.7.5
    platformdirs==2.5.2
    pluggy==1.0.0
    pre-commit==2.20.0
    prometheus-client==0.15.0
    prompt-toolkit==3.0.31
    psutil==5.9.3
    pure-eval==0.2.2
    pyaes==1.6.1
    pycodestyle==2.9.1
    pycparser==2.21
    pycryptodome==3.15.0
    pydantic==1.10.2
    pyflakes==2.5.0
    Pygments==2.13.0
    pyparsing==3.0.9
    pyrsistent==0.19.2
    pytest==7.2.0
    python-dateutil==2.8.2
    pytz==2022.5
    pywin32==304
    pywin32-ctypes==0.2.0
    pywinpty==2.0.9
    PyYAML==6.0
    pyzmq==24.0.1
    qtconsole==5.4.0
    QtPy==2.2.1
    requests==2.28.1
    scipy==1.9.3
    seaborn==0.12.1
    SecretStorage==3.3.3
    Send2Trash==1.8.0
    six==1.16.0
    sniffio==1.3.0
    snowballstemmer==2.2.0
    soupsieve==2.3.2.post1
    stack-data==0.6.0
    statsmodels==0.13.2
    stdlib-list==0.8.0
    stylecloud==0.5.2
    termcolor==2.0.1
    terminado==0.17.0
    tinycss==0.4
    tinycss2==1.2.1
    toml==0.10.2
    tomli==2.0.1
    tornado==6.2
    traitlets==5.5.0
    typing_extensions==4.4.0
    urllib3==1.26.12
    virtualenv==20.16.6
    wcwidth==0.2.5
    webencodings==0.5.1
    websocket-client==1.4.2
    widgetsnbextension==4.0.3
    wordcloud==1.8.2.2


python_requires = >=3.9
package_dir =
    =src

[options.extras_require]
test =
    pytest>=7.1
dev =
    pre-commit==2.19.0
    flake8==5.0.0
    black==22.6.0
    mypy==0.971
    isort==5.10.1
    flake8-return
    flake8-builtins
    flake8-simplify
    flake8-functions
    flake8-annotations
    flake8-unused-arguments
    wemake-python-styleguide
    flake8-cognitive-complexity
    flake8-expression-complexity


[flake8]
unused_arguments_ignore_variadic_names = True
max_line_length = 88
max_annotations_complexity = 5
per_file_ignores =
    tests/*:SIM300, CCR001, ANN201
    # Expression is too complex
    src/ambrosial/swan/typealiases.py:ECE001
    src/ambrosial/swiggy/datamodel/typealiases.py:ECE001
    # Line break before binary operator
    src/ambrosial/swan/restaurants.py:W503
    src/ambrosial/swiggy/__init__.py:E501
ignore =
    # Missing type annotation for self in method.
    ANN101
    # Dynamically typed expressions (typing.Any) are disallowed
    ANN401
    # Found too short, wrong variable and attributes name
    # https://wemake-python-styleguide.readthedocs.io/en/latest/pages/usage/violations/index.html#
    WPS12
    # mixedCase class attribute. That's how API return
    N815
    # False Positive: whitespace before ':'
    # https://github.com/PyCQA/pycodestyle/issues/373
    E203
[mypy]
plugins = pydantic.mypy
ignore_missing_imports = True
strict_equality = True
# strict = True
pretty = True
[mypy-requests.*]
ignore_missing_imports = True


[isort]
profile = black
line_length = 88

[tool:pytest]
testpaths =
    tests
filterwarnings =
    ignore::PendingDeprecationWarning
    ignore::DeprecationWarning
